--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "mocha": "^3.2.0",
     "supertest": "^2.0.1"
   },
-  "name": "express-rate-limiter",
+  "name": "express-throttler",
   "description": "Basic rate limiting for Express.js",
   "version": "1.0.0",
   "main": "index.js",
