--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
     "express": "^4.14.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
+    "redis": "^2.6.5",
     "supertest": "^2.0.1"
   },
   "name": "express-throttler",
   "description": "Basic rate limiting for Express.js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "directories": {
     "test": "tests"
